# vmforge

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: ci.yml  core-ci.yml  engine-bench.yml  guest-tools.yml  qa-extended.yml  qa-smoke.yml  release.yml  storage.yml
assets/download-page/: DESIGN.md  index.html
assets/icons/: README.md
bench/: .gitignore  README.md  bench_firecracker.py  bench_qemu.py  bench_vbox.sh  common.py  fetch_assets.sh  report.py  run_all.sh
bench/engine/: baseline.json
bench/results/: report.md
core/: Cargo.toml  README.md
core/src/: config.rs  error.rs  lib.rs  main.rs  qemu.rs  qmp.rs  snapshot.rs  vm.rs
crates/vmforge-backend-hvf/: Cargo.toml
crates/vmforge-backend-hvf/src/: lib.rs
crates/vmforge-backend-hvf/tests/: tcg_lifecycle.rs
crates/vmforge-backend-kvm/: Cargo.toml
crates/vmforge-backend-kvm/src/: lib.rs
crates/vmforge-bench/: Cargo.toml
crates/vmforge-bench/src/: main.rs
crates/vmforge-cli/: Cargo.toml
crates/vmforge-cli/src/: diagnose.rs  main.rs  redact.rs  tarball.rs
crates/vmforge-cli/tests/: diagnose_cli.rs  failure_injection.rs  net_cli.rs
crates/vmforge-core/: Cargo.toml
crates/vmforge-core/src/: doctor.rs  error.rs  lib.rs  net.rs  snapshot.rs  state.rs  storage.rs  taxonomy.rs  vm.rs
crates/vmforge-core/tests/: storage_subprocess.rs
crates/vmforge-engine-qemu/: Cargo.toml
docs/: architecture.md  beta-triage.md  ci.md  cli-freeze-v1.0-beta.md  diagnose.md  engine-benchmarks.md  error-taxonomy.md  hvf-parity.md  interface-contracts.md  m1-integration-plan.md  macos-packaging-todo.md  networking-port-forwarding.md  qa-v2.md  release-notes.md  release-pipeline.md  uat-step-id-reconciliation.md
docs/tester-guide/: README.md  backup-restore.md  cli-reference.md  diagnostics.md  error-codes.md  gui-guide.md  install-linux.md  install.md  network-doctor.md  networking.md  port-forwarding.md  quickstart-linux.md  reporting-bugs.md  shared-folders.md  snapshot-trees.md  troubleshooting.md
guest-tools/: DESIGN.md  PROTOCOL.md  README.md
guest-tools/agent/: vmforge-ga.openrc  vmforge-ga.py  vmforge-ga.service
guest-tools/host/: vmforgectl.py
guest-tools/tests/: conftest.py  ga_smoke.sh  golden_transcript.jsonl  test_client.py  test_protocol.py
gui/: README.md
gui/spike/: run_qemu_vnc.sh
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/state/: vms.json
gui/ui/: index.html  main.js  style.css
legal/: THIRD-PARTY-NOTICES.md  copyright
networking/: DESIGN.md  README.md  pyproject.toml
networking/examples/: nat.json
networking/tests/: test_doctor.py  test_natgen.py
networking/vmforge_net/: __init__.py  cli.py  config.py  doctor.py  natgen.py  qmp.py
packaging/: build-appimage.sh  build-deb.sh  build-thirdparty-src.sh  gen_icon.py
qa/: .gitignore  README.md  TEST_PLAN.md
qa/cli-freeze/: check.py  frozen-surface.json
qa/failure/: failure_suite.sh
qa/integration/: guest_agent_test.sh  net_hostfwd_test.sh
qa/smoke/: qmp.py  smoke_test.sh
qa/smoke/drivers/: qemu.sh
storage/: README.md  pyproject.toml
storage/demo/: boot_linked_clone.sh
storage/tests/: conftest.py  test_backup.py  test_cli.py  test_disks.py  test_snapshots.py
storage/vmforge_storage/: __init__.py  bundle.py  cli.py  qemu_img.py  store.py
storage/vmforge_storage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+10 files in other folders)
