[package]
name = "vmforge-core"
version = "0.1.0"
edition = "2021"
description = "VMForge core engine: QEMU/KVM lifecycle + QMP control"
license = "LicenseRef-Proprietary"

[lib]
name = "vmforge_core"
path = "src/lib.rs"

[[bin]]
name = "vmforge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
