[package]
name = "vmforge-gui"
version = "0.1.0"
description = "VMForge GUI alpha skeleton: VM manager + console viewer"
edition = "2021"

[lib]
name = "vmforge_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
